--- a/app/src/main/res/layout/fragment_edit_announcement_details.xml
+++ b/app/src/main/res/layout/fragment_edit_announcement_details.xml
@@ -18,8 +18,10 @@
             android:id="@+id/ad_post_title_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Title"
+            android:layout_marginLeft="@dimen/edittext_margin"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:layout_marginTop="@dimen/edittext_margin_top"
+            android:hint="@string/hint_post_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,9 +32,9 @@
             android:id="@+id/ad_post_resident_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:enabled="false"
-            android:hint="Resident Name"
+            android:hint="@string/hint_resident_name"
             app:layout_constraintLeft_toLeftOf="@id/ad_post_title_et"
             app:layout_constraintRight_toRightOf="@id/ad_post_title_et"
             app:layout_constraintTop_toBottomOf="@id/ad_post_title_et" />
@@ -43,8 +45,8 @@
             android:id="@+id/request_desc_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Description"
+            android:layout_margin="@dimen/edittext_margin"
+            android:hint="@string/hint_post_desc"
             android:lines="3"
             android:maxLines="7"
             app:layout_constraintLeft_toLeftOf="@id/ad_post_resident_et"
@@ -56,7 +58,7 @@
             android:id="@+id/request_submit_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:background="@color/colorAccent"
             android:text="Submit"
             android:visibility="visible"
