--- a/app/src/main/res/layout/fragment_edit_maintenance_details.xml
+++ b/app/src/main/res/layout/fragment_edit_maintenance_details.xml
@@ -31,8 +31,10 @@
             android:id="@+id/request_title_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Title"
+            android:layout_marginLeft="@dimen/edittext_margin"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:layout_marginTop="@dimen/edittext_margin_top"
+            android:hint="@string/hint_request_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,9 +43,9 @@
             android:id="@+id/request_unit_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:enabled="false"
-            android:hint="Unit"
+            android:hint="@string/hint_req_apt"
             app:layout_constraintLeft_toLeftOf="@id/request_title_et"
             app:layout_constraintRight_toRightOf="@id/request_title_et"
             app:layout_constraintTop_toBottomOf="@id/request_title_et" />
@@ -53,9 +55,9 @@
             android:id="@+id/request_resident_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:enabled="false"
-            android:hint="Resident Name"
+            android:hint="@string/hint_req_resident_name"
             app:layout_constraintLeft_toLeftOf="@id/request_unit_et"
             app:layout_constraintRight_toRightOf="@id/request_unit_et"
             app:layout_constraintTop_toBottomOf="@id/request_unit_et" />
@@ -64,9 +66,8 @@
             android:id="@+id/request_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:entries="@array/request_status_list"
-            android:hint="Status"
             app:layout_constraintLeft_toLeftOf="@id/request_resident_et"
             app:layout_constraintRight_toRightOf="@id/request_resident_et"
             app:layout_constraintTop_toBottomOf="@id/request_resident_et" />
@@ -75,8 +76,8 @@
             android:id="@+id/request_desc_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Description"
+            android:layout_margin="@dimen/edittext_margin"
+            android:hint="@string/hint_req_desc"
             android:maxLines="7"
             app:layout_constraintLeft_toLeftOf="@id/request_status"
             app:layout_constraintRight_toRightOf="@id/request_status"
@@ -86,8 +87,8 @@
             android:id="@+id/request_comments_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Comments"
+            android:layout_margin="@dimen/edittext_margin"
+            android:hint="@string/hint_req_comments"
             android:maxLines="5"
             app:layout_constraintLeft_toLeftOf="@id/request_desc_et"
             app:layout_constraintRight_toRightOf="@id/request_desc_et"
@@ -97,9 +98,9 @@
             android:id="@+id/request_submit_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:background="@color/colorAccent"
-            android:text="Submit"
+            android:text="@string/btn_txt_submit"
             android:visibility="visible"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -111,9 +112,9 @@
             android:id="@+id/cancel_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:background="@color/colorAccent"
-            android:text="Cancel"
+            android:text="@string/btn_txt_cancel"
             android:visibility="gone"
             app:layout_constraintLeft_toRightOf="@id/request_submit_btn"
             app:layout_constraintRight_toRightOf="parent"
