--- a/app/src/main/res/layout/fragment_user_auth.xml
+++ b/app/src/main/res/layout/fragment_user_auth.xml
@@ -30,10 +30,10 @@
             android:id="@+id/app_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
-            android:text="My Community"
+            android:layout_marginTop="@dimen/margin_app_title_top"
+            android:text="@string/app_name"
             android:textColor="@android:color/darker_gray"
-            android:textSize="32sp"
+            android:textSize="@dimen/title_txt"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -76,11 +76,9 @@
             android:id="@+id/user_login_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_margin="@dimen/margin_login_edittext"
             android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,_,-,.,@"
-            android:hint="Email ID"
+            android:hint="@string/hint_login_email"
             android:inputType="textEmailAddress"
             app:layout_constraintTop_toBottomOf="@id/app_title" />
 
@@ -88,11 +86,10 @@
             android:id="@+id/user_login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="8dp"
-            android:hint="Password"
+            android:layout_marginLeft="@dimen/margin_login_edittext"
+            android:layout_marginTop="@dimen/margin_login_gap"
+            android:layout_marginRight="@dimen/margin_login_edittext"
+            android:hint="@string/hint_login_password"
             android:inputType="textPassword"
             app:layout_constraintTop_toBottomOf="@id/user_login_id" />
 
@@ -101,11 +98,10 @@
             android:id="@+id/authenticate_user"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="@dimen/margin_login_edittext"
+            android:layout_marginRight="@dimen/margin_login_edittext"
             android:background="@color/colorAccent"
-            android:text="Log In"
+            android:text="@string/btn_txt_login"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/user_login_password" />
@@ -116,25 +112,21 @@
             android:id="@+id/signup_user_resident"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="@dimen/margin_login_edittext"
+            android:layout_marginRight="@dimen/margin_login_edittext"
             android:background="@android:color/transparent"
-            android:text="New Resident Sign-Up"
+            android:text="@string/btn_txt_new_resident"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@id/signup_user_mgmt" />
-
 
         <Button
             android:id="@+id/signup_user_mgmt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginBottom="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_margin="@dimen/margin_login_edittext"
             android:background="@android:color/transparent"
-            android:text="New Management Sign Up"
+            android:text="@string/btn_txt_new_mgmt"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
