--- a/app/src/main/res/layout/fragment_user_signup.xml
+++ b/app/src/main/res/layout/fragment_user_signup.xml
@@ -22,14 +22,10 @@
                 android:id="@+id/sign_up_header_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_margin="@dimen/header_margin"
                 android:gravity="center_horizontal"
-                android:text="New Login Credentials"
-                android:textSize="20sp"
+                android:text="@string/header_new_cred"
+                android:textSize="@dimen/header_textsize"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -39,11 +35,7 @@
                 android:id="@+id/user_login_email_hint"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_margin="@dimen/edittext_margin"
                 android:text="@string/signup_id_hint_resident"
                 android:gravity="center_horizontal"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -54,10 +46,7 @@
                 android:id="@+id/user_login_id_txtInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_margin="@dimen/edittext_margin"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/user_login_email_hint">
@@ -67,7 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,_,-,.,@"
-                    android:hint="Email ID"
+                    android:hint="@string/hint_login_email"
                     android:inputType="textEmailAddress" />
 
             </android.support.design.widget.TextInputLayout>
@@ -77,9 +66,9 @@
                 android:id="@+id/user_login_password_txtInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginLeft="@dimen/edittext_margin"
+                android:layout_marginTop="@dimen/edittext_gap"
+                android:layout_marginRight="@dimen/edittext_margin"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/user_login_id_txtInput">
@@ -88,7 +77,7 @@
                     android:id="@+id/user_login_password_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="@string/hint_passwd"
                     android:inputType="textPassword"
                     app:layout_constraintTop_toBottomOf="@id/user_login_id_txtInput" />
             </android.support.design.widget.TextInputLayout>
@@ -98,9 +87,9 @@
                 android:id="@+id/user_confirm_password_txtInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginLeft="@dimen/edittext_margin"
+                android:layout_marginTop="@dimen/edittext_gap"
+                android:layout_marginRight="@dimen/edittext_margin"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/user_login_password_txtInput">
@@ -109,7 +98,7 @@
                     android:id="@+id/user_confirm_password_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Re-type password"
+                    android:hint="@string/hint_confirm_passwd"
                     android:inputType="textPassword"
                     app:layout_constraintTop_toBottomOf="@id/user_login_password_txtInput" />
 
@@ -119,14 +108,10 @@
                 android:id="@+id/community_info_header_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_margin="@dimen/edittext_margin"
                 android:gravity="center_horizontal"
-                android:text="New Community Information"
-                android:textSize="20sp"
+                android:text="@string/header_new_community"
+                android:textSize="@dimen/header_textsize"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -144,9 +129,8 @@
                 android:id="@+id/signup_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="Sign Up"
+                android:layout_margin="@dimen/edittext_margin"
+                android:text="@string/btn_txt_signup"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
