--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar_container"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:elevation="4dp">
+            android:elevation="@dimen/appbar_elevation">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -39,8 +39,8 @@
             android:id="@+id/fab_edit_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:elevation="6dp"
+            android:layout_margin="@dimen/fab_margin"
+            android:elevation="@dimen/fab_elevation"
             android:src="@drawable/ic_baseline_edit_24px"
             android:visibility="gone"
             app:fabSize="normal"
