--- a/app/src/main/res/layout/fragment_edit_apartment_details.xml
+++ b/app/src/main/res/layout/fragment_edit_apartment_details.xml
@@ -19,10 +19,10 @@
             android:id="@+id/apt_name_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="16dp"
-            android:hint="Apartment Name"
+            android:layout_marginLeft="@dimen/edittext_margin"
+            android:layout_marginTop="@dimen/edittext_margin_top"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:hint="@string/hint_apt_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +31,8 @@
             android:id="@+id/apt_num_rooms_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Number of rooms"
+            android:layout_margin="@dimen/edittext_margin"
+            android:hint="@string/hint_num_rooms"
             android:inputType="number"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -42,7 +42,7 @@
             android:id="@+id/apt_status_sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/edittext_margin"
             android:entries="@array/apt_status_list"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -52,8 +52,8 @@
             android:id="@+id/apt_notes_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Notes"
+            android:layout_margin="@dimen/edittext_margin"
+            android:hint="@string/hint_apt_notes"
             android:maxLines="5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -63,8 +63,8 @@
             android:id="@+id/submit_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="32dp"
-            android:text="Submit"
+            android:layout_margin="@dimen/edittext_margin"
+            android:text="@string/btn_txt_submit"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -75,8 +75,8 @@
             android:id="@+id/update_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="Update"
+            android:layout_margin="@dimen/edittext_margin"
+            android:text="@string/btn_txt_update"
             android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
