--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,19 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="appbar_elevation">4dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="adview_height">50dp</dimen>
+    <dimen name="edittext_margin">16dp</dimen>
+    <dimen name="edittext_margin_top">32dp</dimen>
+    <dimen name="hero_img_height">150dp</dimen>
+    <dimen name="fade_scrim_height">75dp</dimen>
+    <dimen name="margin_app_title_top">64dp</dimen>
+    <dimen name="title_txt">32sp</dimen>
+    <dimen name="margin_login_edittext">32dp</dimen>
+    <dimen name="margin_login_gap">8dp</dimen>
+    <dimen name="header_margin">16dp</dimen>
+    <dimen name="header_textsize">20sp</dimen>
+    <dimen name="edittext_gap">8dp</dimen>
 </resources>
